[project]
name = "sansad-semantic-crawler"
version = "1.1.0"
description = "Config-driven semantic crawler for Indian Parliament (Lok Sabha + Rajya Sabha) questions."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Commoner LLP" }]
license = { text = "PolyForm-Noncommercial-1.0.0" }
keywords = [
  "parliament-of-india",
  "lok-sabha",
  "rajya-sabha",
  "parliamentary-questions",
  "public-records",
  "semantic-crawler",
  "civic-tech",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Sociology",
  "Topic :: Text Processing",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
pdf = ["pdfminer.six>=20231228"]
http = ["requests>=2.31.0"]
embeddings = ["numpy>=1.24", "sentence-transformers>=3.0", "torch>=2.0"]
llm = []
all = [
  "numpy>=1.24",
  "pdfminer.six>=20231228",
  "requests>=2.31.0",
  "sentence-transformers>=3.0",
  "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/CommonerLLP/sansad-semantic-crawler"
Source = "https://github.com/CommonerLLP/sansad-semantic-crawler"
Issues = "https://github.com/CommonerLLP/sansad-semantic-crawler/issues"

[project.scripts]
sansad-crawl = "sansad_semantic_crawler.cli:main"

# Constrain setuptools auto-discovery so editable installs from a
# working tree don't pick up sibling top-level dirs (`notes/`, `data/`,
# `examples/`, `docs/`) as candidate packages. Consumers installing via
# `git+https://` clone a gitignore-clean tree and weren't affected by
# the discovery ambiguity, but local editable installs were.
[tool.setuptools.packages.find]
include = ["sansad_semantic_crawler*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
