[project]
name = "commoner-analyse"
version = "0.1.0"
description = "Domain analysis adapters over commoner-probe's acquired public records: classification, aggregation, dossiers, and cross-referencing."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Commoner LLP" }]
license = { text = "PolyForm-Noncommercial-1.0.0" }
keywords = [
  "parliament-of-india",
  "lok-sabha",
  "rajya-sabha",
  "parliamentary-questions",
  "public-records",
  "discourse-analysis",
  "civic-tech",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Sociology",
  "Topic :: Text Processing",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = ["commoner-probe>=0.7.0"]

[project.optional-dependencies]
pdf = ["pdfminer.six>=20231228"]
http = ["requests>=2.31.0"]
embeddings = ["numpy>=1.24", "sentence-transformers>=3.0", "torch>=2.0"]
llm = []
all = [
  "numpy>=1.24",
  "pdfminer.six>=20231228",
  "requests>=2.31.0",
  "sentence-transformers>=3.0",
  "torch>=2.0",
]

[project.urls]
Homepage = "https://github.com/CommonerLLP/commoner-analyse"
Source = "https://github.com/CommonerLLP/commoner-analyse"
Issues = "https://github.com/CommonerLLP/commoner-analyse/issues"

[project.scripts]
commoner-analyse = "commoner_analyse.cli:main"

# Constrain setuptools auto-discovery so editable installs from a
# working tree don't pick up sibling top-level dirs (`notes/`, `data/`,
# `examples/`, `docs/`) as candidate packages. Consumers installing via
# `git+https://` clone a gitignore-clean tree and weren't affected by
# the discovery ambiguity, but local editable installs were.
[tool.setuptools.packages.find]
include = ["commoner_analyse*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
